Add development log system (DEVLOG.md)
- DEVLOG.md: 开发日志，记录改进、测试效果、下一步计划
- /log command: 添加新记录
- /devlog command: 查看历史记录
- Updated git-auto-push.sh to include DEVLOG.md
- Updated .gitignore to allow DEVLOG.md

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 # -----------------------------------------------------------------------------
 /*.py
 /*.sh
-/*.md
 /*.tex
 /*.png
 /*.json
@@ -15,6 +14,10 @@
 /*.csv
 /*.pdf
 /*.npz
+
+# 排除根目录 .md 文件，但保留 DEVLOG.md
+/*.md
+!/DEVLOG.md
 
 # -----------------------------------------------------------------------------
 # 排除特定目录
