Fix .gitignore: keep .tex files, exclude only LaTeX compilation artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,28 @@
 # -----------------------------------------------------------------------------
 /*.py
 /*.sh
-/*.tex
 /*.png
 /*.json
 /*.pkl
 /*.csv
-/*.pdf
 /*.npz
+
+# LaTeX 编译产物（但保留 .tex 源文件）
+/*.aux
+/*.out
+/*.log
+/*.toc
+/*.nav
+/*.snm
+/*.synctex.gz
 
 # 排除根目录 .md 文件，但保留 DEVLOG.md
 /*.md
 !/DEVLOG.md
+
+# 排除根目录 .pdf 文件，但保留论文 PDF（如果需要）
+/*.pdf
+# !/project_report.pdf  # 取消注释以保留特定 PDF
 
 # -----------------------------------------------------------------------------
 # 排除特定目录
