Fix .gitignore: exclude all .tex/.pdf files, only keep core code

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 /*.pkl
 /*.csv
 /*.npz
-
-# LaTeX 编译产物（但保留 .tex 源文件）
+/*.tex
+/*.pdf
 /*.aux
 /*.out
 /*.log
@@ -25,10 +25,6 @@
 # 排除根目录 .md 文件，但保留 DEVLOG.md
 /*.md
 !/DEVLOG.md
-
-# 排除根目录 .pdf 文件，但保留论文 PDF（如果需要）
-/*.pdf
-# !/project_report.pdf  # 取消注释以保留特定 PDF
 
 # -----------------------------------------------------------------------------
 # 排除特定目录
