Simplify .gitignore: only track aad_edge_pushing/ and DEVLOG.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,17 @@
 # =============================================================================
-# .gitignore - 只保留核心代码，排除测试和临时文件
+# .gitignore - 只保留 aad_edge_pushing/ 和 DEVLOG.md
 # =============================================================================
 
-# -----------------------------------------------------------------------------
-# 排除所有根目录文件（测试脚本、分析脚本等）
-# -----------------------------------------------------------------------------
-/*.py
-/*.sh
-/*.png
-/*.json
-/*.pkl
-/*.csv
-/*.npz
-/*.tex
-/*.pdf
-/*.aux
-/*.out
-/*.log
-/*.toc
-/*.nav
-/*.snm
-/*.synctex.gz
+# 排除所有根目录文件
+/*
 
-# 排除根目录 .md 文件，但保留 DEVLOG.md
-/*.md
-!/DEVLOG.md
+# 只保留这些
+!.gitignore
+!.claude/
+!DEVLOG.md
+!aad_edge_pushing/
 
-# -----------------------------------------------------------------------------
 # 排除特定目录
-# -----------------------------------------------------------------------------
 archive/
 build/
 dist/
